styles/components/season-preview.scss
@import '../variables';
@import '../themes';
@import '../mixins/aspect-ratio';

.wrapper {
  @include aspect-ratio(1, 1);

  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  border-radius: 2em;

  overflow: hidden;
  width: 100%;

  cursor: pointer;

  .content {
    background-color: transparentize($dark-grey, .5);
    color: $white;

    display: flex;
    justify-content: center;
    align-items: center;

    transition: all 100ms linear;

    z-index: 30;
  }

  &:hover {
    .content {
      background-color: $light-grey;
      color: $black;
    }
  }

  @each $theme, $color in $themes {
    &:hover.#{$theme} {
      .content {
        background-color: $color;
      }
    }
  }
}

